--- a/MyEndDream/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyEndDream/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=156)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -131,6 +131,7 @@ LastExecutedLaunchName=MA-DESKTOP
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=156)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -176,21 +177,21 @@ LastLevel=/Game/Maps/Map_2D
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PaperZDAnimationSourceEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=PaperZDAnimBPEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=TileMapEditor
+RecentAssetEditors=PaperZDAnimationSourceEditor
 RecentAssetEditors=FlipbookEditor
 RecentAssetEditors=SpriteEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=TileMapEditor
 RecentAssetEditors=TileSetEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -208,7 +209,7 @@ RecentAssetEditors=
 OpenAssetsAtExit=/Game/PaperAssets/TileMap/TM_TerrainsStage.TM_TerrainsStage
 OpenAssetsAtExit=/Game/Blueprints/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Blueprints/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Blueprints/Player/ABP_Player.ABP_Player
+OpenAssetsAtExit=/Game/Blueprints/BP_interface.BP_interface
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -380,7 +381,7 @@ TakeRecorderAudioInputSettings="\"Object.AudioInputDevice\" "
 EditorUtilityWidgetProjectSettings="\"Object.Designer.Designer|Window\" \"Object.Compiler.DefaultCompilerOptions\" "
 PaperZDAnimSequence_Flipbook="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[1]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[2]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[3]\" "
 PaperZDAnimSequence="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[1]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[2]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[3]\" "
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[4].Triggers\" "
 DataAsset=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SceneComponent=
@@ -423,6 +424,11 @@ PaperZDAnimationComponent="\"Object.PaperZD.RenderComponentRef\" "
 Button="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 CheckBox="\"Object.Render Transform.RenderTransform\" "
+BP_NPC_C=
+PaperZDCharacter=
+PaperCharacter=
+Character=
+Pawn=
 
 [DetailCategories]
 EditorStyleSettings.Theme=True
@@ -1466,6 +1472,21 @@ BP_NPC_C.Input=True
 BP_NPC_C.Events=True
 BP_NPC_C.Materials=True
 BP_NPC_C.Networking=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+PropertyWrapper.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2743,36 +2764,36 @@ LastDirectory=
 RecentsFiles=D:/Unreal/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BP_NPC
-MRUItem1=/Game/Blueprints/Player/BP_Player
-MRUItem2=/Game/Blueprints/Player/AS_Player_Directionality
+MRUItem0=/Game/Blueprints/BP_interface
+MRUItem1=/Game/Input/AI_Interact
+MRUItem2=/Game/Input/IMA_TopDown
 MRUItem3=/Game/Blueprints/Player/ABP_Player
-MRUItem4=/Game/PaperAssets/Sprites/Characters/Player/Idle/Alex_idle_anim_32x33
-MRUItem5=/Game/PaperAssets/Sprites/Characters/Player/Idle/Alex_idle_anim_32x32_Sprite_23
-MRUItem6=/Game/Input/IMA_TopDown
-MRUItem7=/Game/Input/IA_Move
-MRUItem8=/Game/Blueprints/BP_HUD
-MRUItem9=/Game/Blueprints/GM_Base
-MRUItem10=/Game/Maps/Map_2D
-MRUItem11=/Game/PaperAssets/TileMap/TM_TerrainsStage
-MRUItem12=/Game/PaperAssets/Sprites/Environment/Terrains/1_Terrains_and_Fences_32x32_TileSet
-MRUItem13=/Game/PaperAssets/Sprites/Characters/Player/Alex_32x32
-MRUItem14=/Game/PaperAssets/Sprites/Environment/City/3_City_Props_32x32_TileSet
-MRUItem15=/Game/PaperAssets/Sprites/Environment/Garden/17_Garden_32x32
-MRUItem16=/Game/PaperAssets/Sprites/Environment/Garden/17_Garden_32x32_TileSet
-MRUItem17=/Game/PaperAssets/Sprites/Characters/Shophia/Premade_Character_32x32_10
-MRUItem18=/Game/PaperAssets/Sprites/Characters/Player/Idle/Alex_idle_anim_32x32
-MRUItem19=/Game/PaperAssets/Sprites/Characters/Player/Run/Alex_run_32x32
-MRUItem20=/Game/PaperAssets/Sprites/Characters/Player/Run/Alex_run_32x32_Sprite_0
-MRUItem21=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Run_Up
-MRUItem22=/Game/PaperAssets/Flipbook/Player/Idle/FB_Player_Idle_Up
-MRUItem23=/Game/PaperAssets/Flipbook/Player/Idle/FB_Player_Idle_Down
-MRUItem24=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Run_Left
-MRUItem25=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Ruin_Down
-MRUItem26=/Game/PaperAssets/Flipbook/Player/Idle/FB_Player_Idle_Right
-MRUItem27=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Run_Right
-MRUItem28=/Game/PaperAssets/Flipbook/Player/Idle/FB_Player_Idle_Left
-MRUItem29=/Game/PaperAssets/Flipbook/Sophia/FB_Shophia_Read
+MRUItem4=/Game/Blueprints/BP_NPC
+MRUItem5=/Game/Blueprints/Player/BP_Player
+MRUItem6=/Game/PaperAssets/TileMap/TM_TerrainsStage
+MRUItem7=/Game/Blueprints/Player/AS_Player_Directionality
+MRUItem8=/Game/PaperAssets/Sprites/Characters/Player/Idle/Alex_idle_anim_32x33
+MRUItem9=/Game/PaperAssets/Sprites/Characters/Player/Idle/Alex_idle_anim_32x32_Sprite_23
+MRUItem10=/Game/Input/IA_Move
+MRUItem11=/Game/Blueprints/BP_HUD
+MRUItem12=/Game/Blueprints/GM_Base
+MRUItem13=/Game/Maps/Map_2D
+MRUItem14=/Game/PaperAssets/Sprites/Environment/Terrains/1_Terrains_and_Fences_32x32_TileSet
+MRUItem15=/Game/PaperAssets/Sprites/Characters/Player/Alex_32x32
+MRUItem16=/Game/PaperAssets/Sprites/Environment/City/3_City_Props_32x32_TileSet
+MRUItem17=/Game/PaperAssets/Sprites/Environment/Garden/17_Garden_32x32
+MRUItem18=/Game/PaperAssets/Sprites/Environment/Garden/17_Garden_32x32_TileSet
+MRUItem19=/Game/PaperAssets/Sprites/Characters/Shophia/Premade_Character_32x32_10
+MRUItem20=/Game/PaperAssets/Sprites/Characters/Player/Idle/Alex_idle_anim_32x32
+MRUItem21=/Game/PaperAssets/Sprites/Characters/Player/Run/Alex_run_32x32
+MRUItem22=/Game/PaperAssets/Sprites/Characters/Player/Run/Alex_run_32x32_Sprite_0
+MRUItem23=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Run_Up
+MRUItem24=/Game/PaperAssets/Flipbook/Player/Idle/FB_Player_Idle_Up
+MRUItem25=/Game/PaperAssets/Flipbook/Player/Idle/FB_Player_Idle_Down
+MRUItem26=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Run_Left
+MRUItem27=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Ruin_Down
+MRUItem28=/Game/PaperAssets/Flipbook/Player/Idle/FB_Player_Idle_Right
+MRUItem29=/Game/PaperAssets/Flipbook/Player/Run/FB_Player_Run_Right
 
 [AssetEditorToolkitTabLocation]
 /Game/PaperAssets/Characters/Alex_run_32x32.Alex_run_32x32=1
@@ -2829,6 +2850,9 @@ MRUItem29=/Game/PaperAssets/Flipbook/Sophia/FB_Shophia_Read
 /Game/PaperAssets/Sprites/Characters/Shophia/Premade_Character_32x32_10_Sprite_77.Premade_Character_32x32_10_Sprite_77=1
 /Game/PaperAssets/Sprites/Characters/Shophia/Premade_Character_32x32_10_Sprite_78.Premade_Character_32x32_10_Sprite_78=1
 /Game/PaperAssets/Sprites/Characters/Shophia/Premade_Character_32x32_10_Sprite_79.Premade_Character_32x32_10_Sprite_79=1
+/Game/Input/AI_Interact.AI_Interact=0
+/Game/Blueprints/NewInterface.NewInterface=1
+/Game/Blueprints/Player/ABP_Player.ABP_Player=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BP_NPC.BP_NPC;
@@ -2877,8 +2901,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3048,30 +3072,32 @@ TcpMessagingSettings=InputSettings.Platforms.InputPlatformSettings_Android,Input
 TemplateSequenceEditorSettings=InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 UdpMessagingSettings=InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 WmfMediaSettings=InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings.None
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/Input/AI_Interact.AI_Interact
 InputAction=
 CameraComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
-PaperFlipbookComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
+PaperFlipbookComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
 BP_Player_C=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
-CharacterMovementComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
-K2Node_VariableGet=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
+CharacterMovementComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
 PaperZDAnimationComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
 SpringArmComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
-CapsuleComponent=
-PaperTileMapActor=CameraComponent.PostProcess.Lens
+CapsuleComponent=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
+PaperTileMapActor=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
 PrimitiveComponent=CameraComponent.PostProcess.Lens
 Actor=CameraComponent.PostProcess.Lens
 K2Node_CallFunction=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
-PropertyWrapper=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
-K2Node_VariableSet=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
+PropertyWrapper=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
 K2Node_EnhancedInputAction=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
 EdGraphNode=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
 PaperZDAnimGraphNode_SetDirectionality=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
 ABP_Player_C=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
 PaperZDAnimGraphNode_SelectByBool=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
 PaperZDAnimGraphNode_PlaySequence=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
-BP_NPC_C=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
+BP_NPC_C=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
 PlayerStart=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
+Blueprint=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup
+K2Node_MacroInstance=CameraComponent.PostProcess.Lens,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Dialog,K2Node_VariableGet.DefaultValueCategory.Dialog
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
